# SF-Tracker

./: .gitignore  LICENSE  README.md  README_cn.md
src/real_world/: CMakeLists.txt  README.md  README_cn.md  package.xml  requirements.txt
src/real_world/launch/: detection.launch  lidar.launch  tracking.launch
src/real_world/onnx/: README.md  README_cn.md
src/real_world/rviz/: rviz.rviz
src/real_world/scripts/: camera.py  detector.py  intrinsics.py  tracker.py
src/real_world/src/: lidar.cpp
src/sf_tracker/: CMakeLists.txt  package.xml
src/sf_tracker/include/sf_tracker/: bfs.hpp  control.hpp  op.hpp  orientation.hpp  path.hpp  planner.hpp  pnp_op.hpp  pp.hpp  trajectory.hpp
src/sf_tracker/include/utils/: astar.hpp  bfs.hpp  bspline.hpp  dijkstra.hpp  lbfgs  utils.hpp
src/sf_tracker/launch/: planning.launch  pnp_tracker.launch
src/sf_tracker/src/: control.cpp  controller.cpp  costmap.cpp  orientation.cpp  planner.cpp  pnp_op.cpp  pnp_op0.cpp  trajectory.cpp
src/simulator/: CMakeLists.txt  package.xml
src/simulator/config/: config.yaml
src/simulator/launch/: sim.launch  tracking.launch
src/simulator/rviz/: rviz.rviz
src/simulator/src/: target.cpp
src/simulator/urdf/: car.xacro  drive.gazebo  driver.gazebo  driver.xacro  link.xacro  mecanum.xacro  robot.xacro
src/simulator/world/: map.world
