<?xml version="1.0"?>
<package format="2">
    <name>simulator</name>
    <version>0.0.0</version>
    <description>The simulator package</description>

    <license>Apache-2.0</license>
    <maintainer email="yuelin@mail.dlut.edu.cn">Yue Lin</maintainer>
    <url type="website">https://github.com/Yue-0/SF-Tracker</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>

    <export></export>
</package>
